justify-center alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,10 @@
   align-items: center;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .justify-between {
   justify-content: space-between;
 }
