--- a/scss/base/_layout.scss
+++ b/scss/base/_layout.scss
@@ -32,6 +32,10 @@
 	align-items: center;
 }
 
+.justify-center {
+	justify-content: center;
+}
+
 .justify-between {
 	justify-content: space-between;
 }
